--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -233,9 +233,9 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
 <table style="font-family:arial,helvetica,sans-serif; background-color: #e6e6e6; margin-bottom:10%;margin-top:4%;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
   <tbody>
     <tr>
-      <td style="overflow-wrap:break-word;word-break:break-word;padding:6%;font-family:arial,helvetica,sans-serif;" align="left">
+      <td style="overflow-wrap:break-word;word-break:break-word;padding:6%;padding-bottom:1rem; font-family:arial,helvetica,sans-serif;" align="left">
         <div>
-            <p style="line-height: 140%;font-size: 1rem;">Come raggiungerci:
+            <p style="line-height: 100%;font-size: 1rem;">Come raggiungerci:
               <a style="text-decoration:none; color:#e00c10;" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Via Centofinestre, 20 60024 Filottrano AN
               </a>
             </p>
