Revert "fix difformità colori bottoni"
This reverts commit 8982e14f1fd3765a5649230286d4e1941b2e82d2.

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -324,7 +324,7 @@
     <script src="https://npmcdn.com/flatpickr/dist/l10n/it.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <!-- inizio modale messaggio locale completo -->
     <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
