--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -132,7 +132,7 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                           {% if modify %}
                                           <legend style="font-size: 14px; line-height: 140%; margin-bottom:14px">Dettaglio prenotazione modificata</legend>
                                           {% else %}
-                                          <legend style="font-size: 14px; line-height: 140%;">Dettaglio prenotazione{% if cancel or closed %} cancellata{% endif %}</legend>
+                                          <legend style="font-size: 14px; line-height: 140%; margin-bottom:14px">Dettaglio prenotazione{% if cancel or closed %} cancellata{% endif %}</legend>
                                           {% endif %}
                                           <p style="font-size: 14.4px; line-height: 140%;">Nome: <strong>{{_name}} {{_surname}}</strong></p>
                                           <p style="font-size: 14.4px; line-height: 140%;">Telefono: <strong>{{_telephone or '--'}}</strong></p>
