--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -16,80 +16,79 @@
   <title></title>
 
 <style type="text/css">
-a, u {
-  text-decoration: none !important;
-}
-
-@media only screen and (min-width: 520px) {
-  .u-row {
-    width: 500px !important;
-  }
-  .u-row .u-col {
-    vertical-align: top;
-  }
-
-  .u-row .u-col-100 {
-    width: 500px !important;
-  }
-
-}
-
-@media (max-width: 520px) {
-  .u-row-container {
-    max-width: 100% !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-  .u-row .u-col {
-    min-width: 320px !important;
-    max-width: 100% !important;
-    display: block !important;
-  }
-  .u-row {
-    width: calc(100% - 40px) !important;
-  }
-  .u-col {
-    width: 100% !important;
-  }
-  .u-col > div {
-    margin: 0 auto;
-  }
-  }
-body {
-  margin: 0;
-  padding: 0;
-}
-
-table,
-tr,
-td {
-  vertical-align: top;
-  border-collapse: collapse;
-}
-
-p {
-  margin: 0;
-}
-
-.ie-container table,
-.mso-container table {
-  table-layout: fixed;
-}
-
-* {
-  line-height: inherit;
-}
-
-a[x-apple-data-detectors='true'] {
-  color: inherit !important;
-  text-decoration: none !important;
-}
-
-table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } @media (max-width: 480px) { #u_content_heading_1 .v-line-height { line-height: 300% !important; } #u_content_text_1 .v-line-height { line-height: 150% !important; } #u_content_button_1 .v-button-colors { color: #FFFFFF !important; background-color: #e00c10 !important; } #u_content_button_1 .v-button-colors:hover { color: #FFFFFF !important; background-color: #86070a !important; } #u_content_button_1 .v-line-height { line-height: 140% !important; } #u_content_button_1 .v-padding { padding: 10px 20px !important; } }
-    </style>
-
+    a, u {
+      text-decoration: none !important;
+    }
+    @media only screen and (min-width: 520px) {
+      .u-row {
+        width: 500px !important;
+      }
+      .u-row .u-col {
+        vertical-align: top;
+      }
+      .u-row .u-col-100 {
+        width: 500px !important;
+      }
+    }
+    @media (max-width: 520px) {
+      .u-row-container {
+        max-width: 100% !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+      }
+      .u-row .u-col {
+        min-width: 320px !important;
+        max-width: 100% !important;
+        display: block !important;
+      }
+      .u-row {
+        width: calc(100% - 40px) !important;
+      }
+      .u-col {
+        width: 100% !important;
+      }
+      .u-col > div {
+        margin: 0 auto;
+      }
+    }
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    table,
+    tr,
+    td {
+      vertical-align: top;
+      border-collapse: collapse;
+    }
+    p {
+      margin: 0;
+    }
+    .ie-container table,
+    .mso-container table {
+      table-layout: fixed;
+    }
+    * {
+      line-height: inherit;
+    }
+    a[x-apple-data-detectors='true'] {
+      color: inherit !important;
+      text-decoration: none !important;
+    }
+    table, td { color: #222222; }
+    a { color: #e00c10; text-decoration: none; }
+    @media (max-width: 480px)
+    { #u_content_heading_1 .v-line-height
+      { line-height: 300% !important; }
+      #u_content_text_1 .v-line-height
+      { line-height: 150% !important; }
+      #u_content_button_1 .v-button-colors { color: #FFFFFF !important; background-color: #e00c10 !important; }
+      #u_content_button_1 .v-button-colors:hover { color: #FFFFFF !important; background-color: #86070a !important; }
+      #u_content_button_1 .v-line-height { line-height: 140% !important; }
+      #u_content_button_1 .v-padding { padding: 10px 15px !important; }
+    }
+</style>
 </head>
-
 <body class="clean-body u_body" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #ffffff;color: #222222">
   <!--[if IE]><div class="ie-container"><![endif]-->
     <!--[if mso]><div class="mso-container"><![endif]-->
@@ -98,22 +97,17 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
           <tr style="vertical-align: top">
             <td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
               <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td align="center" style="background-color: #ffffff;"><![endif]-->
-
-
                 <div class="u-row-container" style="padding: 0px;background-color: transparent">
                   <div class="u-row" style="Margin: 0 auto;min-width: 320px;max-width: 500px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: transparent;">
                     <div style="border-collapse: collapse;display: table;width: 100%;background-color: transparent;">
                       <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:500px;"><tr style="background-color: transparent;"><![endif]-->
-
                         <!--[if (mso)|(IE)]><td align="center" width="500" style="width: 500px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
                           <div class="u-col u-col-100" style="max-width: 320px;min-width: 500px;display: table-cell;vertical-align: top;">
                             <div style="width: 100% !important;">
                               <!--[if (!mso)&(!IE)]><!--><div style="padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;"><!--<![endif]-->
-
                                 <table id="u_content_text_1" style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                   <tbody>
                                     <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
-
                                       <div class="v-line-height" style="line-height: 140%; text-align: left; word-wrap: break-word;">
                                         <p style="font-size: 16px; line-height: 140%;">Ciao {{_name}},</p>
                                         <p style="font-size: 16px; line-height: 140%;">la tua prenotazione a <strong>Ca' Vecchia Beerstrot</strong> &egrave; stata
@@ -149,22 +143,19 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                         </fieldset>
                                         <p style="font-size: 14px; line-height: 140%;">&nbsp;</p>
                                       </div>
-
                                     </td>
                                   </tr>
                                 </tbody>
                               </table>
-
                               <table id="u_content_button_1" style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                 <tbody>
                                   <tr>
                                     <td style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 22px;font-family:arial,helvetica,sans-serif;" align="left">
-
                                       {% if not (cancel or closed) %}
                                       <div align="right">
                                         <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:arial,helvetica,sans-serif;"><tr><td class="v-button-colors" style="font-family:arial,helvetica,sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:36px; v-text-anchor:middle; width:263px;" arcsize="11%" stroke="f" fillcolor="#e00c10"><w:anchorlock/><center style="color:#FFFFFF;font-family:arial,helvetica,sans-serif;"><![endif]-->
                                           <a href="https://www.beerstrot.it/prenota/consulta.html?id={{pid}}" target="_blank" class="v-button-colors" style="box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #e00c10; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
-                                            <span class="v-line-height v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="font-size: 0.8rem; line-height: 120%;">Cancella o Modifica la Prenotazione</span></span>
+                                            <span class="v-line-height v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="font-size: 14px; line-height: 120%;">Cancella o Modifica la Prenotazione</span></span>
                                           </a>
                                           <!--[if mso]></center></v:roundrect></td></tr></table><![endif]-->
                                           </div>
@@ -173,22 +164,19 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                           <div align="right">
                                             <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:arial,helvetica,sans-serif;"><tr><td class="v-button-colors" style="font-family:arial,helvetica,sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:36px; v-text-anchor:middle; width:263px;" arcsize="11%" stroke="f" fillcolor="#e00c10"><w:anchorlock/><center style="color:#FFFFFF;font-family:arial,helvetica,sans-serif;"><![endif]-->
                                               <a href="https://www.beerstrot.it/prenota/" target="_blank" class="v-button-colors" style="margin-top:20px;box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #e00c10; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
-                                                <span class="v-line-height v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="font-size: 0.8rem; line-height: 120%;">Fai una nuova prenotazione</span></span>
+                                                <span class="v-line-height v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="font-size: 14px; line-height: 120%;">Fai una nuova prenotazione</span></span>
                                               </a>
                                               <!--[if mso]></center></v:roundrect></td></tr></table><![endif]-->
                                               </div>
                                               {% endif %}
-
                                             </td>
                                           </tr>
                                         </tbody>
                                       </table>
-
                                       <table style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
                                             <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
-
                                               <table height="0px" align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;border-top: 1px solid #BBBBBB;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%">
                                                 <tbody>
                                                   <tr style="vertical-align: top">
@@ -198,12 +186,10 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                                   </tr>
                                                 </tbody>
                                               </table>
-
                                             </td>
                                           </tr>
                                         </tbody>
                                       </table>
-
                                       <table style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
@@ -217,7 +203,6 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                           </tr>
                                         </tbody>
                                       </table>
-
                                       <table style="font-family:arial,helvetica,sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
@@ -229,7 +214,6 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                           </tr>
                                         </tbody>
                                       </table>
-
                                       <table style="font-family:arial,helvetica,sans-serif; background-color: #e6e6e6; margin-bottom:10%;margin-top:4%;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
                                         <tbody>
                                           <tr>
@@ -272,7 +256,6 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                             </tr>
                                           </tbody>
                                         </table>
-
                                         <!--[if (!mso)&(!IE)]><!--></div><!--<![endif]-->
                                         </div>
                                       </div>
@@ -281,8 +264,6 @@ table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } 
                                         </div>
                                       </div>
                                     </div>
-
-
                                     <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
                                     </td>
                                   </tr>
