--- a/menu/index.html
+++ b/menu/index.html
@@ -159,27 +159,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta <br>
-                            <small>Contiene: Anidride Solforosa e Solfiti, Latte</small></p>
-                        </li>
-                        <li>
-                            <h3>Alette di Pollo <span class="price">5,5</span></h3>
-                            <p>A scelta fra leggermente piccanti o piccanti <br>
-                            <small>Contiene: Glutine, Uova, Latte</small></p>
-                        </li>
-                        <li>
-                            <h3>Arrosticini <span class="price">5,5</span></h3>
-                            <p>Arrosticini di pecora</p>
-                        </li>
-                    </ul>
-                </div>
-            </div> -->
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per i Più Piccoli</h2>
@@ -557,7 +536,7 @@
                         </li> -->
                         <li>
                             <h3>Verdicchio DOC <span class="price">Quarto 3 / Litro 8</span></h3>
-                            <p><em>Cantina di Tavignano</em></p>
+                            <p><em>Cantina Belisario</em></p>
                         </li>
                     </ul>
                 </div>
@@ -640,10 +619,10 @@
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
                             <p>Aromatico. Servito con acqua tonica J. Gasco</p>
                         </li>
-                       <li>
+                       <!-- <li>
                             <h3>Gin Tonic Silverback <span class="price">8</span></h3>
                             <p>London Gin. Servito con acqua tonica J. Gasco</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>Gin Tonic Puro <span class="price">8</span></h3>
                             <p>Morbido. Servito con acqua tonica J. Gasco</p>
@@ -741,10 +720,10 @@
                             <h3>Centenario 7 anni <span class="price">6</span></h3>
                             <p>Costa Rica 40%. <br>Profumo di vaniglia, cuoio, cioccolato, sciroppo d'acero e menta. Al palato sentori di cioccolato, pelle, miele e menta piperita</p>
                         </li>
-                     <li>
+                        <!-- <li>
                             <h3>Don Papa oltre 7 anni <span class="price">7</span></h3>
                             <p>Filippine 40%. <br>Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica</p>
-                        </li> 
+                        </li> -->
                         <li>
                             <h3>Du Perou 10 anni <span class="price">8</span></h3>
                             <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato</p>
