--- a/prenota/index.html
+++ b/prenota/index.html
@@ -126,7 +126,9 @@
         </div>
     </div>
 <!-- fine dashboard -->
-    <div class="panel-home-2n" id="prenotaDiv" hidden>
+
+<!-- inizio old form button Si può rimuovere? -->
+    <!-- <div class="panel-home-2n" id="prenotaDiv" hidden>
       <div class="row">
         <div class="columns small-6" id="innerInfoDiv"></div>
         <div class="columns small-6" id="buttonInfoDiv">
@@ -138,7 +140,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+<!-- fine old form button -->
+
+<!-- inizio form -->
     <div class="panel-home-2n form">
         <form id="form">
             <div class="row">
@@ -165,7 +170,7 @@
             <div class="row extra-space-hero">
                 <div class="small-12 medium-6 columns end">
                     <label><strong>Quale turno*</strong>
-                <div id="shiftGridL"></div>
+                        <div id="shiftGridL"></div>
                     </label>
                     <ul class="small-block-grid-2  extra-space-turno error" id="shiftGrid">
                         <li class="bShift"><a class="small button disabled">19.00-21.00</a></li>
@@ -242,6 +247,7 @@
             </div>
         </form>
     </div>
+<!-- fine form -->
 <!-- inizio footer -->
     <footer class="panel-footer">
         <div class="row">
