solved loader in consulta

--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -67,6 +67,10 @@
             <br>
         </div>
     </header>
+<!-- inizio loader -->
+    <div id="loading" hidden>
+    </div>
+<!-- fine loader -->
     <div class="panel-home-2n">
         <div class="row">
             <div class="small-12 medium-12 columns">
