--- a/menu/index.html
+++ b/menu/index.html
@@ -390,18 +390,18 @@
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
+                        </li> -->
                        <!-- <li>
                             <h3>Punto</h3>
                             <p>Session IPA 3,9% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-		                <!-- <li>
+		                <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Billycock</h3>
                             <p>Doppia New England IPA 7,8% <br><em>Birrificio MC-77</em></p>
@@ -550,6 +550,10 @@
                             <p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
+                            <h3>Serrano DOC <span class="price">14,5 / 3,5</span></h3>
+                            <p>Rosso Conero <br><em>Cantina Umani Ronchi</em></p>
+                        </li>
+                        <li>
                             <h3>Barbarossa DOC <span class="price">15,5 / 3,5</span></h3>
                             <p>Lacrima di Morro D'Alba <br><em>Cantina di Tavignano</em></p>
                         </li>
@@ -562,9 +566,17 @@
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li> -->
                         <li>
+                            <h3>Villa Bianchi DOC <span class="price">14,5 / 3,5</span></h3>
+                            <p>Verdicchio dei Castelli di Jesi Classico <br><em>Cantina Umani Ronchi</em></p>
+                        </li>
+                        <li>
+                            <h3>Casal di Serra DOC <span class="price">18 / 4</span></h3>
+                            <p>Verdicchio dei Castelli di Jesi Superiore Biologico<br><em>Cantina Umani Ronchi</em></p>
+                        </li>
+                        <!-- <li>
                             <h3>Costa Verde DOC <span class="price">14,5 / 3</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico <br><em>Cantina di Tavignano</em></p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
