--- a/menu/index.html
+++ b/menu/index.html
@@ -535,7 +535,7 @@
                             <p><em>Cantina di Tavignano</em></p>
                         </li> -->
                         <li>
-                            <h3>Verdicchio DOC <span class="price">Quarto 3 / Litro 8</span></h3>
+                            <h3>Verdicchio di Matelica DOC <span class="price">Quarto 3 / Litro 8</span></h3>
                             <p><em>Cantina Belisario</em></p>
                         </li>
                     </ul>
