--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
-					<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura.</p>
+				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
