--- a/menu/index.html
+++ b/menu/index.html
@@ -571,7 +571,7 @@
                         </li>
                         <li>
                             <h3>Casal di Serra DOC <span class="price">18 / 4</span></h3>
-                            <p>Verdicchio dei Castelli di Jesi Superiore Biologico<br><em>Cantina Umani Ronchi</em></p>
+                            <p>Verdicchio dei Castelli di Jesi Classico Superiore Biologico<br><em>Cantina Umani Ronchi</em></p>
                         </li>
                         <!-- <li>
                             <h3>Costa Verde DOC <span class="price">14,5 / 3</span></h3>
@@ -631,10 +631,10 @@
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
                             <p>Aromatico. Servito con acqua tonica J. Gasco</p>
                         </li>
-                       <!-- <li>
+                        <li>
                             <h3>Gin Tonic Silverback <span class="price">8</span></h3>
                             <p>London Gin. Servito con acqua tonica J. Gasco</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Gin Tonic Puro <span class="price">8</span></h3>
                             <p>Morbido. Servito con acqua tonica J. Gasco</p>
@@ -732,10 +732,10 @@
                             <h3>Centenario 7 anni <span class="price">6</span></h3>
                             <p>Costa Rica 40%. <br>Profumo di vaniglia, cuoio, cioccolato, sciroppo d'acero e menta. Al palato sentori di cioccolato, pelle, miele e menta piperita</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Don Papa oltre 7 anni <span class="price">7</span></h3>
                             <p>Filippine 40%. <br>Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Du Perou 10 anni <span class="price">8</span></h3>
                             <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato</p>
