--- a/menu/index1.html
+++ b/menu/index1.html
@@ -107,7 +107,7 @@
                     <a href="#liquore" role="tab" tabindex="5" aria-selected="false" controls="liquore">Liquori</a>
                 </li>
                 <li class="tab-title" role="presentational">
-                    <a href="#liquore" role="tab" tabindex="6" aria-selected="false" controls="drinks">Drinks</a>
+                    <a href="#drinks" role="tab" tabindex="6" aria-selected="false" controls="drinks">Drinks</a>
                 </li>
             </ul>
         </div>
@@ -804,7 +804,7 @@
                         <a href="#liquore" role="tab" tabindex="5" aria-selected="false" controls="liquore">Liquori</a>
                     </li>
                     <li class="tab-title" role="presentational">
-                        <a href="#liquore" role="tab" tabindex="6" aria-selected="false" controls="drinks">Drinks</a>
+                        <a href="#drinks" role="tab" tabindex="6" aria-selected="false" controls="drinks">Drinks</a>
                     </li>
                 </ul>
             </div>
