--- a/index.html
+++ b/index.html
@@ -123,11 +123,13 @@
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
 				<span class="hide-for-small"><h2>Asporto</h2></span>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
+				<p style="margin-bottom: 0px;" >Nota bene:</p>
+				<ul class="disc">
+					<li>Dato l'elevato afflusso di persone, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
+					<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
+				</ul>
 				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
-				<!-- <p>Per ordinare un asporta chiamaci al numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p> -->
-
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
