--- a/asporto/index.html
+++ b/asporto/index.html
@@ -86,6 +86,11 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+                <p style="margin-bottom: 0px;" >Nota bene:</p>
+                <ul class="disc">
+                    <li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
+                    <li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
+                </ul>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
