--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+	<link rel="stylesheet" href="https://www.beerstrot.it/"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -198,32 +198,39 @@
 	</div>
 	<div class="panel-home-n">
 		<div class="row">
-			<div class="medium-6 large-6 columns">
+			<div class="medium-6 large-6 columns end">
 				<h1>Domande Frequenti</h1>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row extra-space">
 			<div class="small-12 columns">
-				<ul class="accordion" data-accordion>
-					<li class="accordion-navigation">
-					    <a href="#panel1a">Sono celiaco. Siete attrezzati a riguardo?</a>
-					    <div id="panel1a" class="content active">
-					      Abbiamo una cucina unica quindi c'è contaminazione crociata da glutine.
-					    </div>
-					</li>
-					<li class="accordion-navigation">
-					    <a href="#panel2a">Nel periodo estivo in caso di piaggia avete posto all'interno?</a>
-					    <div id="panel2a" class="content">
-					      No. Nei mesi estivi abbiamo solamente tavoli all'esterno. Dovesse piovere durante il servizio, vi forniremo contenitori per l'asporto dove mettere il cibo se state già mangiando.
-					    </div>
-					</li>
-					<li class="accordion-navigation">
-					    <a href="#panel3a">Accordion 3</a>
-					    <div id="panel3a" class="content">
-					      Panel 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					    </div>
-					</li>
-				</ul>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Sono celiaco. Siete attrezzati a riguardo?</div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+			            <p>Abbiamo una cucina unica quindi c'è contaminazione crociata da glutine.</p>
+			        </div>
+			    </div>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Nel periodo estivo in caso di piaggia avete posto all'interno? lorem ipsum die sine qua non </div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+			            <p>No. Nei mesi estivi abbiamo solamente tavoli all'esterno. Dovesse piovere durante il servizio, vi forniremo contenitori per l'asporto dove mettere il cibo se state già mangiando.</p>
+			        </div>
+			    </div>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Gruppi numerosi</div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+					   <p>Periodo estivo accettiamo un massimo di 12 persone. Se siete di più sarete disposti su più tavoli quasi sempre vicini.</p>
+					</div>
+			    </div>
 			</div>
 		</div>
 	</div>
@@ -304,5 +311,6 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
+	<script src="https://www.beerstrot.it/js/accordion.js"></script>
 </body>
 </html>
