--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="https://www.beerstrot.it/"/>
+	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
