--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -202,7 +202,7 @@
 				<h1>Domande Frequenti</h1>
 			</div>
 		</div>
-		<div class="row extra-space">
+		<div class="row xtra-space-image-tab-home">
 			<div class="small-12 columns">
 			    <div class="menu">
 			        <div class="header">
@@ -215,7 +215,7 @@
 			    </div>
 			    <div class="menu">
 			        <div class="header">
-			            <div class="title">Nel periodo estivo in caso di piaggia avete posto all'interno? lorem ipsum die sine qua non </div>
+			            <div class="title">Nel periodo estivo in caso di piaggia avete posto all'interno?</div>
 			            <span class="icon">&plus;</span>
 			        </div>
 			        <div class="content">
