better code layout

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url='https://beerstrot.it/prenota/?id=notes'" />
   </head>
   <body>
-    <p>Per piacere, seguire <a href="https://beerstrot.it/prenota/?id=notes">questo link</a>.</p>
+    <p>Segui <a href="https://beerstrot.it/prenota/?id=notes">questo link</a>.</p>
   </body>
 </html>
