--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -311,6 +311,6 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
-	<script src="https://www.beerstrot.it/js/accordion.js"></script>
+	<script src="js/accordion.min.js"></script>
 </body>
 </html>
