--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -13,7 +13,7 @@
 	<meta name="twitter:site" content="@beerstrot"/>
 	<meta name="twitter:title" content="Specialisti in Hamburger Goduriosi"/>
 	<meta name="twitter:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
-	<meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
+	<meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/background-home-estiva.jpg"/>
 	<meta name="twitter:url" content="https://www.beerstrot.it"/>
 	<meta property="fb:app_id" content="1549149915357715"/>
 	<meta property="og:url" content="https://www.beerstrot.it"/>
@@ -215,7 +215,7 @@
 			    </div>
 			    <div class="menu">
 			        <div class="header">
-			            <div class="title">Nel periodo estivo in caso di piaggia avete posto all'interno?</div>
+			            <div class="title">Nel periodo estivo in caso di pioggia avete posto all'interno?</div>
 			            <span class="icon">&plus;</span>
 			        </div>
 			        <div class="content">
