--- a/video/index.html
+++ b/video/index.html
@@ -167,11 +167,10 @@
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
+                <a href="https://www.beerstrot.it/prenota/">Prenota</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
                 <a href="https://www.beerstrot.it/asporto/">Asporto</a>
-                <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="https://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
