--- a/_old_file/menu/cibo/diablo.html
+++ b/_old_file/menu/cibo/diablo.html
@@ -36,8 +36,7 @@
             <li class="name">
                  <h2><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
-            <li class="toggle-topbar">
-				<i class="fas fa-bars extra-space-hamburger"></i>
+            <li class="toggle-topbar menu-icon">
 				<a href="#"><span></span></a>
 			</li>
         </ul>
