--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -51,8 +51,7 @@
 			<li class="name">
 				 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
 			</li>
-			<li class="toggle-topbar">
-				<i class="fas fa-bars extra-space-hamburger"></i>
+			<li class="toggle-topbar menu-icon">
 				<a href="#"><span></span></a>
 			</li>
 		</ul>
@@ -308,9 +307,9 @@
 		</div>
 	</div>
 <!-- fine navbar footer-->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-	<script src="https://www.beerstrot.it/js/app.min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/app.min.js"></script>
 	<script src="js/accordion.min.js"></script>
 </body>
 </html>
