--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -230,6 +230,33 @@
 					   <p>Periodo estivo accettiamo un massimo di 12 persone. Se siete di più sarete disposti su più tavoli quasi sempre vicini.</p>
 					</div>
 			    </div>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Sono celiaco. Siete attrezzati a riguardo?</div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+			            <p>Abbiamo una cucina unica quindi c'è contaminazione crociata da glutine.</p>
+			        </div>
+			    </div>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Nel periodo estivo in caso di pioggia avete posto all'interno?</div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+			            <p>No. Nei mesi estivi abbiamo solamente tavoli all'esterno. Dovesse piovere durante il servizio, vi forniremo contenitori per l'asporto dove mettere il cibo se state già mangiando.</p>
+			        </div>
+			    </div>
+			    <div class="menu">
+			        <div class="header">
+			            <div class="title">Gruppi numerosi</div>
+			            <span class="icon">&plus;</span>
+			        </div>
+			        <div class="content">
+					   <p>Periodo estivo accettiamo un massimo di 12 persone. Se siete di più sarete disposti su più tavoli quasi sempre vicini.</p>
+					</div>
+			    </div>
 			</div>
 		</div>
 	</div>
