--- a/prenota/index.html
+++ b/prenota/index.html
@@ -37,6 +37,7 @@
 <!-- End Facebook Pixel Code -->
 </head>
 <body>
+<!-- inizio navbar con hamburger -->
    <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
@@ -326,7 +327,7 @@
     <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
             <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
-                <p class="lead extra-space" id="modalLead2">Vuoi inviare il promemoria della prenotazione ai clienti?</p>
+                <div class="lead extra-space" id="modalLead2">Vuoi inviare il promemoria della prenotazione ai clienti?</div>
                 <a role="button" id="no" class="button small tiny right" style="margin-top: 5px;">No, non inviare</a>
                 <a role="button" id="yes" class="button small tiny left" style="margin-top: 5px;">Sì, Invia</a>
             </div>
