better layput dashboard

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -62,7 +62,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <header class="row">
-        <div class="medium-12 large-12 columns" id="hdiv">
+        <div class="medium-12 large-12 columns">
             <h1 id="ttitle">Riserva un Tavolo</h1>
             <br>
         </div>
@@ -77,6 +77,10 @@
             <label>Seleziona giorno
                 <input tabindex="5" id="from2" type="text">
             </label>
+        </div>
+        <div class="small-12 columns" id="innerNotesDiv1" >
+        </div>
+        <div class="small-12 columns" id="innerNotesDiv2" >
         </div>
         <div class="small-12 medium-12 large-12 columns" id="innerNotesDiv" style="overflow-x:auto;">
             <table id="shiftsTable">
