--- a/prenota/index.html
+++ b/prenota/index.html
@@ -326,7 +326,7 @@
     </div>
 <!-- fine modale messaggio locale completo -->
 <!-- inizio modale invio promemoria ai clienti e aggiungere/rimuovere giorni chiusura-->
-    <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <div id="myModal2" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
             <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
                 <div class="lead extra-space" id="modalLead2">Vuoi inviare il promemoria della prenotazione ai clienti?</div>
