--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <!-- navbar con hamburger -->
-	<nav class="top-bar" data-topbar role="navigation">
+	<!-- <nav class="top-bar" data-topbar role="navigation">
 		<ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
 			<li class="name">
 				 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
@@ -67,6 +67,19 @@
 				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
 			</ul>
 		</section>
+	</nav>
+ -->
+	<nav>
+	  	<ul class="menu">
+		    <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+		    </li>
+		    <li class="item"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+		    <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+		    <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+		    <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+		    <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+		    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+	  	</ul>
 	</nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio header -->
@@ -338,5 +351,6 @@
 	<script src="js/foundation.min.js"></script>
 	<script src="js/app.min.js"></script>
 	<script src="js/accordion.min.js"></script>
+	<script src="js/navbar.js"></script>
 </body>
 </html>
