logo update for new navbar

--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -71,13 +71,14 @@
  -->
 	<nav>
 	  	<ul class="menu">
-		    <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+		    <li class="logo" id="hamburger"><a href="https://www.beerstrot.it"><img class="img-logo" src="asset/img/svgs/logo1.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
 		    </li>
+		    <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
 		    <li class="item"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
 		    <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
 		    <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
 		    <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-		    <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+		    <!--  -->
 		    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
 	  	</ul>
 	</nav>
