--- a/menu/index.html
+++ b/menu/index.html
@@ -552,8 +552,8 @@
                             <p>Rosso Conero <br><em>Cantina Umani Ronchi</em></p>
                         </li>
                         <li>
-                            <h3>Barbarossa DOC <span class="price">15,5 / 3,5</span></h3>
-                            <p>Lacrima di Morro D'Alba <br><em>Cantina di Tavignano</em></p>
+                            <h3>Rubico DOC <span class="price">15,5 / 3,5</span></h3>
+                            <p>Lacrima di Morro D'Alba <br><em>Cantina Marotti Campi</em></p>
                         </li>
                         <!-- <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
