test nuova navbar

--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -70,18 +70,16 @@
 	</nav>
  -->
 	<nav>
-	  	<ul class="menu">
-		    <li class="logo" id="hamburger"><a href="https://www.beerstrot.it"><img class="img-logo" src="asset/img/svgs/logo1.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
-		    </li>
-		    <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
-		    <li class="item"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
-		    <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-		    <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-		    <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-		    <!--  -->
-		    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
-	  	</ul>
-	</nav>
+        <ul class="menu1" id="hamburger">
+            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+            </li>
+            <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+            <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+        </ul>
+    </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio header -->
 	<header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
@@ -211,7 +209,7 @@
 	</div>
 	<div class="panel-home-n">
 		<div class="row">
-			<div class="medium-6 large-6 columns end">
+			<div class="medium-12 large-12 columns">
 				<h1>Domande Frequenti</h1>
 			</div>
 		</div>
