--- a/contatti/index1.html
+++ b/contatti/index1.html
@@ -37,30 +37,20 @@
 <!-- End Facebook Pixel Code -->
 </head>
 <body>
-   <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
-            <li class="name">
-                 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+<!-- inizio navbar con hamburger -->
+    <nav>
+        <ul class="menu1" id="hamburger">
+            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="../asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
-            <li class="toggle-topbar menu-icon">
-				<a href="#"><span></span></a>
-			</li>
+            <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+            <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
-        <section class="top-bar-section">
-            <ul class="right">
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-            </ul>
-        </section>
     </nav>
 <!-- fine navbar con hamburger -->
-    <header class="row">
+    <header class="row extra-space">
         <div class="medium-12 large-12 columns">
             <h1>Contatti</h1>
             <br>
@@ -181,6 +171,7 @@
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
                 <a href="https://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
+                <script src="../js/navbar.js"></script>
             </p>
         </div>
     </div>
