--- a/404.html
+++ b/404.html
@@ -15,32 +15,21 @@
 <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
 </head>
 <body>
-<!-- navbar con hamburger -->
-    <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
-            <li class="name">
-                 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+<!-- inizio navbar con hamburger -->
+    <nav>
+        <ul class="menu1" id="hamburger">
+            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
-            <li class="toggle-topbar menu-icon">
-				<a href="#"><span></span></a>
-			</li>
+            <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+            <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+            <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
-        <section class="top-bar-section">
-            <ul class="right">
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-            </ul>
-        </section>
     </nav>
 <!-- fine navbar con hamburger -->
     <div class="row">
-        <div class="medium-12 large-12 columns">
+        <div class="medium-12 large-12 columns extra-space">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
             <p>Non sappiamo dove sia la pagina che cerchi.</p>
             <a href="https://www.beerstrot.it" class="left">&larr; Torna a casa</a>
@@ -123,5 +112,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
+    <script src="https://www.beerstrot.it/js/navbar.js"></script>
 </body>
 </html>
