--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -71,7 +71,7 @@
  -->
 	<nav>
         <ul class="menu1" id="hamburger">
-            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+            <li class="logo active"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
