--- a/contatti/index.html
+++ b/contatti/index.html
@@ -45,11 +45,10 @@
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
             <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-            <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+            <li class="item active"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
-<!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns extra-space">
             <h1>Contatti</h1>
