--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -168,7 +168,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
     <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
-    <script src="https://www.beerstrot.it/js/navbar.js"></script>
+    <script src="https://www.beerstrot.it/js/navbar.min.js"></script>
 <!-- inizio modale messaggio vuoi cancellare la prenotazione -->
     <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <p id="modalText"></p>
