--- a/contatti/index.html
+++ b/contatti/index.html
@@ -177,6 +177,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
-    <script src="https://www.beerstrot.it/js/navbar.js"></script>
+    <script src="https://www.beerstrot.it/js/navbar.min.js"></script>
 </body>
 </html>
