--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -350,6 +350,6 @@
 	<script src="js/foundation.min.js"></script>
 	<script src="js/app.min.js"></script>
 	<script src="js/accordion.min.js"></script>
-	<script src="https://www.beerstrot.it/js/navbar.js"></script>
+	<script src="https://www.beerstrot.it/js/navbar.min.js"></script>
 </body>
 </html>
