--- a/prenota/index.html
+++ b/prenota/index.html
@@ -304,7 +304,7 @@
     <script src="https://npmcdn.com/flatpickr/dist/l10n/it.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
-    <script src="https://www.beerstrot.it/js/navbar.js"></script>
+    <script src="https://www.beerstrot.it/js/navbar.min.js"></script>
 <!-- inizio modale messaggio locale completo -->
     <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
