--- a/menu/index.html
+++ b/menu/index.html
@@ -50,7 +50,7 @@
             <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
-            <li class="item active"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+            <li class="item attuale"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
             <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
             <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
