--- a/asporto/index.html
+++ b/asporto/index.html
@@ -51,7 +51,7 @@
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-            <li class="item active"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+            <li class="item attuale"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
             <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
